# ppr

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: Cache.cmake  Compilers.cmake  Dependencies.cmake  HAL.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  VCPkg.cmake
cmake/compiler/: Clang.cmake  GCC.cmake  MSVC.cmake
game/: CMakeLists.txt  main.cpp
include/pP/: Macros.h
lib/engine/: CMakeLists.txt
lib/engine/app/: App.cppm  Application.cpp  CMakeLists.txt
lib/engine/core/: CMakeLists.txt  Core.Assert.cppm  Core.Containers.HashMap.cppm  Core.Containers.SparseVector.cppm  Core.Containers.StableVector.cppm  Core.Containers.cppm  Core.Enums.cppm  Core.FunctionRef.cppm  Core.HAL.cppm  Core.Memory.Allocator.cppm  Core.Memory.Arena.cppm  Core.Memory.PagePool.cppm  Core.Memory.cppm  Core.Opaque.cppm  Core.Strings.cppm  Core.cppm  Core.natvis
lib/engine/core/darwin/: Core.HAL.darwin.cpp
lib/engine/core/generic/: Core.HAL.generic.cpp
lib/engine/core/linux/: Core.HAL.linux.cpp
lib/engine/core/windows/: Core.HAL.windows.cpp
lib/engine/math/: CMakeLists.txt  Math.cppm
lib/engine/rhi/: CMakeLists.txt  RHI.cppm
lib/engine/tests/: CMakeLists.txt  main.cpp
lib/engine/tests/core/: Core.Containers.HashMap.Tests.cppm  Core.Containers.SparseVector.Tests.cppm  Core.Containers.StableVector.Tests.cppm  Core.Containers.Tests.cppm  Core.Enums.Tests.cppm  Core.Memory.Arena.Tests.cppm  Core.Memory.PagePool.Tests.cppm  Core.Memory.Tests.cppm  Core.Opaque.Tests.cppm  Core.Strings.Tests.cppm  Core.Tests.cppm
